--- a/Section6/views/welcome.ejs
+++ b/Section6/views/welcome.ejs
@@ -3,5 +3,8 @@
   <div class="form">
     <h1>Welcome, <%= username %>, back to the site!</h1>
     <p><a href="/logout">Logout</a></p>
+    <a href="/story/1">Story 1</a>
+    <a href="/story/2">Story 2</a>
+    <a href="/story/3">Story 3</a>
   </div>
 </div>
