--- a/movieFanSite/views/head.ejs
+++ b/movieFanSite/views/head.ejs
@@ -5,9 +5,9 @@
   crossorigin="anonymous"
 />
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
 <!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
 
 <link
   href="https://fonts.googleapis.com/css?family=Metamorphous|Swanky+and+Moo+Moo"
