add movie links

--- a/movieFanSite/views/index.ejs
+++ b/movieFanSite/views/index.ejs
@@ -16,7 +16,9 @@
           <%# We have an array called parsedData! %> <%
           parsedData.forEach((movie)=> { %>
           <div class="col-md-3 col-sm-4 poster">
-            <img src="<%= imageBaseUrl + movie.poster_path %>" alt="">
+            <a href="/movie/<%= movie.id %>"
+              ><img src="<%= imageBaseUrl + movie.poster_path %>" alt=""
+            /></a>
           </div>
           <% }) %>
         </div>
