--- a/movieFanSite/views/single-movie.ejs
+++ b/movieFanSite/views/single-movie.ejs
@@ -6,18 +6,19 @@
 		<div class="row">
 			<div class="col-sm-8 col-sm-offset-2 text-center">
 				<h1 class="single-movie-title">
-
+                    <%= parsedData.title %>
 				</h1>
 				
 				<h3 class="single-movie-title">
-
+                    <%= parsedData.tagline %>
 				</h3>
 				
+                <a href="<%= parsedData.homepage %>">
+                    <img src="<%= imageBaseUrl + parsedData.poster_path %>" />
+                </a>
 
-				<img src="" />
-				
 				<p class="overview-header">Movie Synopsis: <span class="single-movie-overview">
-					
+                    <%= parsedData.overview %>
 				</span></p>
 			</div>
 		</div>
