--- a/movieFanSite/views/single-movie.ejs
+++ b/movieFanSite/views/single-movie.ejs
@@ -13,7 +13,7 @@
                     <%= parsedData.tagline %>
 				</h3>
 				
-                <a href="<%= parsedData.homepage %>">
+                <a href="<%= parsedData.homepage %>" target="_blank">
                     <img src="<%= imageBaseUrl + parsedData.poster_path %>" />
                 </a>
 
@@ -40,8 +40,11 @@
         <h4 class="modal-title" id="myModalLabel">Movie Information</h4>
       </div>
       <div class="modal-body">
-
-
+        <a href="https://www.imdb.com/title/<%= parsedData.imdb_id %>" target="_blank">IMDB link</a>
+        <p><strong>Budget - </strong><%= parsedData.budget %></p>
+        <p><strong>Revenue - </strong><%= parsedData.revenue %></p>
+        <p><strong>Release Date - </strong><%= parsedData.release_date %></p>
+        <p><strong>Production Company - </strong><%= parsedData.production_companies[0].name %></p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
